# l-command

./: .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  diary.md  pyproject.toml
.cursor/rules/: my-rule.mdc
.cursordocs/: developer-guide.md  implementation-examples.md  implementation-plan.md  index.md  json_command_tests.md  task.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml
docs/design/: config.example.toml  issue-23-config-schema.md  issue-23-implementation-guide.md
src/l_command/: cli.py  config.py  constants.py  utils.py
src/l_command/handlers/: __init__.py  archive.py  binary.py  default.py  directory.py  image.py  json.py  markdown.py  media.py  pdf.py  xml.py  yaml.py
tests/: test_archive_handler.py  test_binary_handler.py  test_cli.py  test_config.py  test_csv_handler.py  test_handlers_init.py  test_image_handler.py  test_json_detection.py  test_markdown_handler.py  test_media_handler.py  test_pdf_handler.py  test_utils.py  test_xml_handler.py  test_yaml_handler.py
tests/test_files/: invalid.json  not_json.txt  valid.json
