[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "l-command"
version = "0.1.0"
description = "Smart file and directory viewer"
authors = [{name = "gyu-don", email = "takumi.kt@gmail.com"}]
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
l = "l_command.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "A", "C4", "SIM", "TD"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["l_command"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.hatch.build.targets.wheel]
packages = ["src/l_command"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=src/l_command {args:tests}"
lint = "ruff check ."
format = "ruff format ."
pre-commit = "pre-commit run --all-files"
pre-commit-install = "pre-commit install"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pre-commit>=4.2.0",
]
